finished thz sources

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -983,7 +983,73 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2005},
   publisher={Optical Society of America}
 }
-
+@article{ramakrishnan2012surface,
+  title={Surface plasmon-enhanced terahertz emission from a hemicyanine self-assembled monolayer},
+  author={Ramakrishnan, Gopakumar and Kumar, Nishant and Planken, Paul and Tanaka, Daisuke and Kajikawa, Kotaro},
+  journal={Optics express},
+  volume={20},
+  number={4},
+  pages={4067--4073},
+  year={2012},
+  publisher={Optical Society of America}
+}
+@article{welp2013superconducting,
+  title={Superconducting emitters of THz radiation},
+  author={Welp, Ulrich and Kadowaki, Kazuo and Kleiner, Reinhold},
+  journal={Nature Photonics},
+  volume={7},
+  number={9},
+  pages={702--710},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+@article{asada2008resonant,
+  title={Resonant tunneling diodes for sub-terahertz and terahertz oscillators},
+  author={Asada, Masahiro and Suzuki, Safumi and Kishimoto, Naomichi},
+  journal={Japanese Journal of Applied Physics},
+  volume={47},
+  number={6R},
+  pages={4375},
+  year={2008},
+  publisher={IOP Publishing}
+}
+@inproceedings{sullivan2012field,
+  title={Field Guide to Terahertz Sources, Detectors, and Optics},
+  author={O'Sullivan, Cr{\'e}idhe MM and Murphy, J Anthony},
+  year={2012},
+  organization={SPIE},
+  url={http://spie.org/samples/FG28.pdf}
+}
+@article{doucas1992first,
+  title={First observation of Smith-Purcell radiation from relativistic electrons},
+  author={Doucas, G and Mulvey, JH and Omori, M and Walsh, J and Kimmitt, MF},
+  journal={Physical review letters},
+  volume={69},
+  number={12},
+  pages={1761},
+  year={1992},
+  publisher={APS}
+}
+@article{tantiwanichapan2014graphene,
+  title={Graphene on nanoscale gratings for the generation of terahertz Smith-Purcell radiation},
+  author={Tantiwanichapan, Khwanchai and Wang, Xuanye and Swan, Anna K~and Paiella, Roberto},
+  journal={Applied Physics Letters},
+  volume={105},
+  number={24},
+  pages={241102},
+  year={2014},
+  publisher={AIP Publishing}
+}
+@article{lewis2014review,
+  title={A review of terahertz sources},
+  author={Lewis, Roger A},
+  journal={Journal of Physics D: Applied Physics},
+  volume={47},
+  number={37},
+  pages={374001},
+  year={2014},
+  publisher={IOP Publishing}
+}
 
 /*}}}*/
 
