--- a/intro.tex
+++ b/intro.tex
@@ -15,6 +15,8 @@ While it is unlikely that a radically new material will be invented for construc
 % TODO THz science ??
 This work focuses on the terahertz (THz) spectral range, which spans roughly from 100 GHz to 10 THz. While the electrodynamic theory presented in this work is scale-invariant and can be used from microwave to optical frequencies, the selected frequency range defined the properties of materials and technological processes available. Compared to the well established optical technology (400---700 THz), the range of materials suitable for THz frequencies gives additional possibilities, such as the use of superconductors, extremely high permittivity dielectrics and tunable ferroelectrics. Additionally, the much longer wavelength of terahertz waves, e.g. 300 $\upmu$m for 1 THz in free space, also enables much easier fabrication of the structures. On the other hand, some materials commonly found in the microwave or optical applications must be avoided, as they exhibit excessively high losses in the terahertz range (such as glass, water, most plastics etc.)
 
+%\cite{lewis2014review} approximated the number of papers as an exponential, doubling every 3.2 years: D = 2**[(year-1975)/3.2]
+
 The THz range is located in the spectrum at the boundary of the regions where people use "electronic" or "optical" approaches. At THz frequencies, devices from both paradigms are often seamlessly used together: waves from waveguides can be collimated by lenses, pulses emitted from lumped antenna emitters are detected by electrooptical crystals etc. Yet none of these approaches is optimal for the THz applications; from the electronic point of view, we are for instance still lacking transistors with fast enough response and the microstrip circuits become too lossy at high frequencies. The optical approach is often complicated by the strong wave-optics phenomena such as diffraction, while some light-matter interactions are weaker, limiting the possibilities for e.g. amplitude modulation by Pockels effect. These deficiencies give additional reasons to search for the new possibilities of the photonic crystals and metamaterials operating in the terahertz range.
 
 % TODO THz MM review 
