--- a/thztech.tex
+++ b/thztech.tex
@@ -1,9 +1,7 @@
 \section{Short review of the terahertz technology}
 The terahertz range of the electromagnetic spectrum, spanning roughly from 100 GHz to 10 THz, has met as yet a relatively small application potential in science and technology in the 20th century, compared to the development in the microwave ($<$ 100 GHz) and near-infrared ($>$ 100 THz) or optical ranges. The reason can be traced down both to the limited choice and high cost of suitable terahertz sources and detectors, and to their usually small efficiency or sensitivity, respectively. 
 
-There is a great number of literature that describes different terahertz sources and detectors in detail \cite[pp. 155-158]{lee2008book}\cite{sullivan2012field,lewis2014review}
-\cite{lewis2014review}
-
+There is a great number of books and papers that describes different terahertz sources and detectors in detail \cite[pp. 155-158]{lee2008book}\cite{sullivan2012field,lewis2014review}
 and many of them are also, with more or less detail, discussed in previous doctoral theses written in our group (\cite[pp. 2-30]{pashkin2004phd}, \cite[pp. 19-25]{nemec2006phd}, \cite[pp. 7-26]{fekete2008phd}, \cite[pp. 11-21]{sibik2010dp}, \cite[pp. 31-45]{yahiaoui2011phd}, \cite[pp. 33-38]{mics2012phd}, \cite[pp. 25-33]{skoromets2013phd}, etc.).
 
 Electromagnetic waves in the terahertz range are radiated whenever charged particles are subject to fast-enough acceleration at the picosecond scale. 
@@ -11,7 +9,7 @@ The generation processes may be sorted with regards to the medium in which the e
 In the following paragraphs, try to briefly review the terahertz technology in a systematic manner.
 % There are numerous ways to generate  ...
 
-\subsection{Weak thermal emission in the THz range}
+\subsection{Weak thermal emission in the THz range}%{{{
 Firstly, let us remind why thermal sources are rarely used in the THz range. The blackbody radiation is governed by the Planck law % TODO cite
 \begin{equation}I(f, T) = \frac{2 h}{\pi^2 c^2}\frac{f^3}{e^{\frac{h f}{kT}}-1} \mathrm{\,W\,sr^{-1}\,Hz^{-1}\,m^{-2}}, \label{eq_planck}\end{equation}
 %$$ ,$$ TODO
@@ -19,7 +17,7 @@ from which it follows that the luminosity $I$ in the terahertz range is always v
 %  although the thermal energy at room temperature $T$ is significantly higher than the photon energy $hf$ at 1 THz
 $$k_B T \approx 1.38\cdot 10^{-26} \text{ J K}^{-1} \cdot 300 \text{ K~} \approx 25.8 \text{ meV } \quad\gg\quad h f \approx 4.13 \text{ meV}, $$
 and therefore the power radiated in the THz range can not be significantly improved by increasing the blackbody temperature. Particularly, it can be shown that in this part of the spectrum the luminosity scales only linearly with the temperature $T$; in contrast, the total power scales as $T^{4}$ as follows from the Stefan-Bolzmann law. Therefore, sources other than thermal are preferred for measurements in the THz range.
-
+%}}}
 \subsection{Terahertz sources}
 \paragraph{Kinetic energy of an electron beam} %{{{ ================================================================================
 One class of devices uses the kinetic energy of an electron beam propagating in the vacuum. In devices accelerating a circular electron beam, such as cyclotrons or synchrotrons, radiation is emitted when electrons are passing through the bends in the particle path, the deflection of the electrons being caused by a static transverse magnetic field. If the electrons are packed in a short bunch, it results in an efficient emission of a coherent broadband pulse. %% with an improved efficiency in THz if they are packed
@@ -28,7 +26,7 @@ passing through a periodically-poled magnet called \textit{wiggler}.
 Both types of devices provide an excellent brightness and tunability, but they are rather large-scale facilities often with a dedicated building. 
 %In both devices, the electrons have to propagate in bunches. 
 
-Tabletop sources of radiation covering a part of the THz range are the microwave vacuum tubes: \textit{gyrotron}, backward wave oscillators (BWO, also known as \textit{carcinotrons}, of the O- and M-types), and \textit{klystron}. The unifying principle of these devices is that an electron beam speed, position or density can be modulated the electric field, and the modulation in turn radiates amplified electromagnetic wave. Backward-wave oscillators are % have been ... since xxxties + cite
+Tabletop sources of radiation covering a part of the THz range are the microwave vacuum tubes: \textit{gyrotron}, travelling-wave and backward wave oscillators (BWO, also known as \textit{carcinotrons}, of the O- and M-types), and \textit{klystron}. The unifying principle of these devices is that an electron beam speed, position or density can be modulated the electric field, and the modulation in turn radiates amplified electromagnetic wave. Backward-wave oscillators are % have been ... since xxxties + cite
  used for continuous-wave spectroscopy, but the tunability of one device is typically limited to tens of percent and the power drops with the frequency.
 % M-type, the most powerful, (M-BWO) and the O-type (O-BWO). The O-type delivers typically power in the range of 1 mW at 1000 GHz to 50 mW at 200 GHz. 
 
@@ -41,29 +39,26 @@ As a solution, either substantial changes in the device geometry, constituent ma
 %This concept is, in fact, applicable to all % TODO is this truly 'all'?
  %devices where the wavelength is not determined by quantum phenomena, or by physical quantity other than dimension (such as the magnetic field strength in a magnetron tube).
 
-The frequency range of operation of high-electron-mobility transistors (HEMT) has also been extended roughly up to 1 THz.
 If a relatively low power is required, principles used in microwave engineering can be extended to the lower part of the terahertz spectrum.  %% TODO stylistics
+The frequency range of operation of high-electron-mobility transistors (HEMT) has also been extended roughly up to 1 THz. %Sometimes all accompanying components are integrated to a MMIC.
 
 An oscillator may be formed by placing an element with negative differential resistance (NDR) into a resonant cavity or circuit. 
 In \textit{Gunn diodes}, widely used in microwave technology, the NDR is due to the electron effective mass abruptly increasing with their velocity in certain direct-gap semiconductors.
 In \textit{resonant tunneling} diodes (RTDs)\cite{asada2008resonant,brown1991oscillations}, NDR is achieved by a heterostructure quantum well, where, upon an increase of the voltage, the electron energy is detuned from the resonance of the quantum well, and the current is reduced.
 
-Yet another principle is employed in the \textit{impact ionization avalanche transit-time} (IMPATT) diodes, where a non-destructive breakdown of a reverse-biased p-n junction follows the voltage with a delay that again enables oscillations if surrounded by a cavity. 
+Yet another principle is employed in the \textit{impact ionization avalanche transit-time} (IMPATT) diodes, where a non-destructive breakdown of a reverse-biased p-n junction follows the voltage with a delay which again enables oscillations if surrounded by a cavity. 
 In contrast, in the \textit{tunneling transit-time} (TUNNETT) diodes, the NDR is achieved by changing the transit time of carriers through the semiconductor volume.
 %}}}
+\paragraph{Nonlinear up-conversion of microwaves}%{{{ ================================================================================
+%% TODO
+%}}}
 \paragraph{Nonlinear down-conversion of optical waves}%{{{ ================================================================================
-%, known also as \textit{continuous-wave optical rectification}. 
-%The nonlinearity needed for the difference-frequency generation usually comes from intrinsic properties of a nonlinear crystal. 
-%???? material, as the wavelength range of semiconductor structures operation is limited from bottom by its size.
-
-%todo Electro-optic crystals 
-
 The opposite approach, also known as \textit{optical rectification}, generates THz radiation as the difference frequency between two or more detuned optical waves.
 The radiation may come from two lasers or laser modes [CCap7], mutually detuned by a frequency that is to be generated. %% TODO The lasers may be classical solid state, diodes or e.g. two modes in one infrared QCL. %% TODO cite one classical, and the QCL
 Other possibility is to use the \textit{terahertz parametric generation} where a single wave enters the nonlinear crystal as the \textit{pump} and the second wave, \textit{idler}, is generated during the nonlinear process. The \textit{idler} wave is kept in an optical resonator; the terahertz output can be tuned by changing parameters of the resonator. 
 For nonlinear generation of pulses in the THz range, usually a mode-locked laser is used that emits pulses that intrinsically cover a broad spectrum of frequencies (e.g. typically over 360-390 THz for a titanium-sapphire laser). The difference-frequencies are generated from all optical frequency components simultaneously, which results in a terahertz pulse with a very broad spectrum given by the type of nonlinear medium. 
 
-The classical process of nonlinear optical conversion involves transparent materials, and where some measures are taken to account for the generally different velocity of all interacting waves.
+The classical process of nonlinear optical conversion involves transparent electro-optic crystals, where some measures are taken to account for the generally different velocity of all interacting waves.
 \begin{itemize}
 \item{For the difference-frequency generation between optical waves of close frequency, the classical condition of \textit{phase synchronization} is equivalent to ensure similar \textit{group} velocity at the optical and terahertz frequency. Of the materials satisfying these requirements, zinc telluride (ZnTe), gallium selenide (GaSe), and lithium niobate (LiNbO$_{3}$, [CCap19]) have found widest application in the frequency range up to 3--5 THz. } 
 \item{The \textit{quasi-phase-matching} technique allows to compensate the difference of the group velocity of the optical wave and the terahertz wave by periodically altering the nonlinear coefficients of a crystal so that the nonlinear contribution to the resulting wave never reverses its sign. Crystals of \textit{periodically poled lithium niobate} (PPLN) are often used for this, with the possibility of shaping the poled regions as wedges (\textit{fanned-out PPLN}), which allows to change the effective poling pitch. This method is suitable for continuous-wave or narrow-band pulse terahertz generation.  }  % TODO cite 
@@ -103,38 +98,60 @@ Solid-state terahertz lasers are represented by the p-doped germanium laser, whe
 
 Quantum cascade lasers (QCL) are composed of hundreds of semiconductor layers, which create multiple closely-spaced quantum levels. Each electron or hole traversing the structure thus undergoes multiple transitions. Such devices are compact sources of efficient, continuous and slightly tunable radiation in the mid-IR region, the extension of their operation under 2 THz always requires cryogenic cooling and is subject to intense research.
 %}}}
-\paragraph{Other THz sources}%{{{
+\paragraph{Other THz sources}%{{{ ================================================================================
 Although a complete list of all physical phenomena that lead to possibly useful emission of terahertz waves is beyond the scope of this thesis, we try to point out some most notable examples of these. 
 
 Earlier in our laboratory it was observed that an oblique impact of femtosecond optical pulse on 50-150 nm thick gold layer on glass emits a THz pulse of similar energy (\cite{kadlec2004optical,kadlec2005study}) as those from an interdigitated emitter. Other experiments, e.g. with thin organic layers,\cite{ramakrishnan2012surface} suggest the process may be intensified by surface plasmons.
 
 Tunable terahertz continuous-wave emission was observed in multiple stacked Josephson junctions\cite{welp2013superconducting}, where the oscillation frequency is determined by the junction voltage as $f(U) = 2e/h$, thus 2 mV correspond to roughly 1 THz. This method however requires cryogenic temperatures as a superconductor structure is used, and is still subject to primary research.
 
-The \textit{Smith-Purcell} effect is observed when relativistic electron beam passes close to a corrugated surface, e.g. of an optical grating. The emitted coherent radiation can be obtained also in the THz region\cite{doucas1992first} (as determined by the grating pitch). A similar effect was later observed from a DC current flowing through a graphene monolayer placed over a photonic crystal.\cite{tantiwanichapan2014graphene}
-%% TODO add: GEME coherent?, MMIC?
+The \textit{Smith-Purcell} effect is observed when relativistic electron beam passes close to a corrugated surface, e.g., of an optical grating. The emitted coherent radiation can be obtained also in the THz region\cite{doucas1992first} (as determined by the grating pitch). A similar effect was later observed from a DC current flowing through a graphene monolayer placed over a photonic crystal.\cite{tantiwanichapan2014graphene}
+%% TODO add: GEME coherent?, 
 %}}}
 
 \subsection{Terahertz detectors}
 \paragraph{Power detection}%{{{
-Bolometers, Si bolometers (The best sensitivity at liquid-helium temperatures ,  slow response)
-acousto-optical Golay cells
-pyroelectric detectors are used
+A broad class of detectors applicable to the terahertz range measures the energy of the radiation. Pyroelectric detectors convert the heat directly to the electric field, classical bolometers use elements that change resistivity (thermistors), whereas in the Golay cells, the incident terahertz pulse heats the air and an acoustic signal is detected.
+
+The concept of a bolometer can be used for devices with greatly improved sensitivity and/or speed. \textit{Transition-edge} bolometers use superconductor as the temperature detector, which is very sensitive to temperature changes near its (cryogenic) transition temperature. The changes in the superconductor behaviour can be detected by a superconducting quantum interference device (SQUID).  In the \textit{hot-electron} bolometers, the superconductor forms a narrow bridge between two contacts so that the changes in resistance are more pronounced.
+The best sensitivity of bolometers is reached at liquid-helium temperatures.
 %}}}
 \paragraph{Amplitude detection}%{{{
-Photoconductive receiving antennas (similar to generator)
-Electrooptic sampling (similar to generator)
-see 
-Ultrafast electro-optic field sensors
+Another class of terahertz detectors enable measuring the electric field $E(t)$ (or magnetic field $M(t)$) instead of the time-averaged power density. An important advantage of such devices is the possibility to recover both the magnitude and phase of the field, along with the possibility to synchronously recover short terahertz transients in case of pulsed sources.
 
-Magnetooptic sampling based on Faraday rotation effect, induced by transient magnetic THz field
+Most of them are based on coincidence of the terahertz pulse and a \textit{sampling} (or, \textit{gating}) optical pulse. The terahertz waveform can be recovered using an optical delay line, thus scanning through the mutual timing of the pulses. % TODO cite
+Single-shot detection schemes have been also implemented, usually being based on the temporal dilation (chirp) of the sampling optical pulse and subsequent analysis by a spectrometer.
+The physical process of sampling detection is in most cases analogous to one of the above described mechanisms of terahertz pulse generation:
+\begin{enumerate}
+ \item{Photoconductive receiving antennas use a short optical pulse to introduce a subpicosecond time window to allow electric field to move a charge across a superconductor gap between two metallic stripes. The voltage difference can then be measured and is proportional to the instantaneous THz field at the time of arrival of the optical pulse.} 
+ \item{Electrooptic sampling uses the nonlinear interaction between the optical and THz electric field in an electrooptical crystal, typically a thin plate of ZnTe. To discriminate between the sampling optical pulse and the  weak superposed component that was generated by the nonlinear interaction, usually a change of optical polarization is detected.} 
+ \item{Magnetooptic sampling was also demonstrated, based on the Faraday rotation induced by the magnetic component of a transient THz wave.} % TODO CITE
+ \end{enumerate}
+
+
+Similar to all cases of the pulsed terahertz sources, the temporal resolution of sampling terahertz detectors is generally limited by the duration of the sampling optical pulse, and more often, by the limited speed of the photoconductive antenna or by group velocity dispersion of the nonlinear crystal. Similar measures can be taken to improve the bandwidth, such as the use of thin plates of organic crystals (DAST) % CITE
+or terahertz nonlinear detection in plasma.
+
 Terahertz-induced lensing 
 frequency downconversion in Schottky harmonic mixers (similar to generator)
+heterodyne mixing
 
 % TODO check the THz detectors as I proposed
 % HN: In the other configuration the ellipticity is measured near the zero-transmission point (Fig. 1.3b) [hn54]
 % HN: this scheme is important when a single photodetector is required, like in certain imaging applications [hn55] or in single-shot measurements [hn56]
 
 %}}}
+
+@article{wu1996ultrafast,
+  title={Ultrafast electro-optic field sensors},
+  author={Wu, Q and Zhang, X-C},
+  journal={Applied physics letters},
+  volume={68},
+  number={12},
+  pages={1604--1606},
+  year={1996},
+  publisher={AIP Publishing}
+}
 
 \subsection{Specifics of pulsed THz measurement}
 Pulsed measurement allows for automatic retrieval not only of the amplitude, but also of the phase spectrum. It should be noted that the measurement of the transmittance phase can be accomplished with continous tunable source, too, using a Mach-Zender interferometer.
