thztech content completed

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1050,6 +1050,33 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2014},
   publisher={IOP Publishing}
 }
+@book{yin2012terahertz,
+  title={Terahertz imaging for biomedical applications: pattern recognition and tomographic reconstruction},
+  author={Yin, Xiaoxia and Ng, Brian W-H and Abbott, Derek},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+% --- detection ---
+@article{wu1996ultrafast,
+  title={Ultrafast electro-optic field sensors},
+  author={Wu, Q and Zhang, X-C},
+  journal={Applied physics letters},
+  volume={68},
+  number={12},
+  pages={1604--1606},
+  year={1996},
+  publisher={AIP Publishing}
+}
+@article{riordan1997free,
+  title={Free-space transient magneto-optic sampling},
+  author={Riordan, JA and Sun, FG and Lu, ZG and Zhang, X-C},
+  journal={Applied Physics Letters},
+  volume={71},
+  number={11},
+  pages={1452--1454},
+  year={1997},
+  publisher={AIP Publishing}
+}
 
 /*}}}*/
 
