--- a/result.tex
+++ b/result.tex
@@ -97,7 +97,53 @@ We ran two series of wire array simulations (Fig. \ref{fg_omegap_a}) as a simple
 In the second series of simulations, we kept the spacing $a = 100\,\upmu$m and changed the wire radius $r$. The analytic model\cite{maslovski2002wire} and FDTD simulation give similar results (up to 5 \%) even for wire radii approaching roughly $a/4$. For thicker wires, the analytic model predicts higher plasma frequency than FDTD.  To conclude, the results of the model presented by Maslovski match the FDTD simulation with good accuracy for thin wires (where $r \lesssim a/5$). One possible application of the wire medium is in the construction of negative refractive index metamaterials, where a small negative real value of permittivity is desired.
 }
 %}}}
+\section{Metal mesh}%{{{
+The resonance in the metallic mesh has been used as a filter 
+%@article{ulrich1967effective,
+  %title={Effective low-pass filters for far infrared frequencies},
+  %author={Ulrich, R},
+  %journal={Infrared Physics},
+  %volume={7},
+  %number={2},
+  %pages={65--74},
+  %year={1967},
+  %publisher={Elsevier}
+%}
+%@article{ulrich1967far,
+  %title={Far-infrared properties of metallic mesh and its complementary structure},
+  %author={Ulrich, Reinhard},
+  %journal={Infrared Physics},
+  %volume={7},
+  %number={1},
+  %pages={37--55},
+  %year={1967},
+  %publisher={Elsevier}
+%}
+... has been known for half a century\cite{vogel1964transmission}
+%@article{vogel1964transmission,
+  %title={Transmission and reflection of metallic mesh in the far infrared},
+  %author={Vogel, P and Genzel, L},
+  %journal={Infrared Physics},
+  %volume={4},
+  %number={4},
+  %pages={257--262},
+  %year={1964},
+  %publisher={Elsevier}
+%}
 
+Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1994resonant}
+%@article{porterfield1994resonant,
+  %title={Resonant metal-mesh bandpass filters for the far infrared},
+  %author={Porterfield, David W and Hesler, JL and Densing, R and Mueller, ER and Crowe, TW and Weikle II, RM},
+  %journal={Applied Optics},
+  %volume={33},
+  %number={25},
+  %pages={6046--6052},
+  %year={1994},
+  %publisher={Optical Society of America}
+%}
+
+%}}}
 \section{Metallic strips} % references to -> % note about plasmonic particles
 \section{Metallic strip pair} % references to ->
 \section{Split-ring resonator} % references to ->
@@ -185,6 +231,8 @@ We performed series of experiments to measure the effective permeability  $\mu_{
 %{{{
 \begin{figure} \caption{img/SphereWire\_eps100\_R25\_FDTD.pdf}  \centering  \includegraphics[width=10cm]{img/SphereWire_eps100_R25_FDTD.pdf} \end{figure} \clearpage
 \begin{figure} \caption{SphereWire sketch}  \centering  \includegraphics[width=10cm]{img/SphereWire_sketch.pdf} \end{figure} \clearpage
+
+% approximation for frequency well below the grid-resonance  
 %}}}
 \section{Dielectric rods parallel to magnetic field} % references to ->
 \label{sect_diel_rods_mag}
