--- a/theory.tex
+++ b/theory.tex
@@ -1,4 +1,4 @@
-
+%% TODO fix that f is used as frequency and also as arbitrary function f(t)
 
 
 \add{The theoretical chapter starts with a brief review of \textit{electrodynamics of continuous media}. In its customary form without account for spatial dispersion, this topic is treated in every related textbook, so classical linear electrodynamics is introduced in a minimalistic manner.
