description of the THz experiment

--- a/thztech.tex
+++ b/thztech.tex
@@ -118,7 +118,7 @@ The \textit{Smith-Purcell} effect is observed when relativistic electron beam pa
 \paragraph{Thermal detection}%{{{
 A broad class of detectors, applicable also to the terahertz range, measures the energy of the radiation. 
 Classical bolometers use elements that change resistivity (thermistors, thermocouples) when they are heated by radiation.
-Pyroelectric detectors convert the heat directly to the electric signal by means of a crystal that changes its polarisation with temperature. In the Golay cells, the incident terahertz pulse heats the air, whose thermal expansion is detected. Such devices usually operate at room temperature.
+Pyroelectric detectors convert the heat directly to the electric signal by means of a crystal that changes its polarisation with temperature. In Golay cells, an incident terahertz pulse heats the air, whose thermal expansion is detected. Such devices usually operate at room temperature.
 
 The concept of a bolometer can be greatly improved, in terms of sensitivity or speed, at cryogenic temperatures when a superconductor near its critical temperature or a doped semiconductor are used as the temperature detector. In the \textit{hot-electron} bolometers, the superconductor forms a narrow bridge between two contacts so that the changes in resistance are more pronounced. The changes in the superconductor behaviour can also be detected by a superconducting quantum interference device (SQUID).  
 
@@ -126,9 +126,10 @@ The concept of a bolometer can be greatly improved, in terms of sensitivity or s
 \paragraph{Heterodyne mixing}%{{{
 Terahertz continuous-wave signal can be mixed with a similar signal, producing a difference frequency in the microwave spectral range which can be easily processed using an oscilloscope or a spectral analyzer. The nonlinear components often used up to 1 THz are Schottky diodes. Fast-enough amplitude detectors, such as hot-electron bolometers based on Nb or NbN superconducting transition, can also be used with a higher sensitivity.\cite{lee2008book}
  instead of the time-averaged power density.
+
 %}}}
 \paragraph{Time-resolved field sampling}%{{{
-Another class of terahertz detectors enables measuring the electric field $E(t)$ (or magnetic field $M(t)$) as a function of time. An important advantage of such devices is the possibility to recover the instantaneous amplitude of the field (i.e. both its modulus and phase in the frequency domain). It also allows to synchronize the detection with the pulsed source to record short terahertz transients.
+Another class of terahertz detectors enables measuring the electric field $\E(t)$ (or magnetic field $\H(t)$) as a function of time. An important advantage of such devices is the possibility to recover the instantaneous amplitude of the field (i.e. both its modulus and phase in the frequency domain). It also allows to synchronize the detection with the pulsed source to record short terahertz transients.
 (It should be noted that the measurement of the transmittance phase can be accomplished with continous tunable source, too, using a Mach-Zender interferometer.
 Pulsed measurement is however vital for transient dynamics investigation.)
 
